--- a/css/styles.css
+++ b/css/styles.css
@@ -82,3 +82,34 @@ body {
 #submit:hover {
     background-color: darkgreen;
 }
+
+#profile {
+    text-align: center;
+    background-color: rgb(45, 51, 59);
+    padding: 2rem;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    width: 75%;
+}
+
+#username {
+    padding: 5px;
+    padding-bottom: 15px;
+
+}
+
+#back-button {
+    background-color: green;
+    color: white;
+    margin-top: 3.2%;
+    padding: 0.75rem 0.75rem;
+    border: none;
+    border-radius: 8px;
+    font-size: 0.8rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+#back-button:hover {
+    background-color: darkgreen;
+}
